# api/api.go
@@ -20,16 +20,24 @@ func NewGin(h *handler.Handler)*gin.Engine{
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(files.Handler))
 	p:=r.Group("/public")
 	p.POST("/create", h.CreatePublic)
-	p.PUT("/update", h.UpdatePublic)
-	p.DELETE("/delete", h.DeletePublic)
+	p.PUT("/update/:id", h.UpdatePublic)
+	p.DELETE("/delete/:id", h.DeletePublic)
 	p.GET("/getall", h.GetAllPublic)
-	p.GET("/getbyid", h.GetbyIdPublic)
+	p.GET("/getbyid/:id", h.GetbyIdPublic)
+	p.GET("/cheak/:id", h.CheakPublic)
 	
 	pa:=r.Group("/party")
 	pa.POST("/create", h.CreateParty)
-	pa.PUT("/update", h.UpdateParty)
-	pa.DELETE("/delete", h.DeleteParty)
+	pa.PUT("/update/:id", h.UpdateParty)
+	pa.DELETE("/delete/:id", h.DeleteParty)
 	pa.GET("/getall", h.GetAllParty)
-	pa.GET("/getbyid", h.GetbyIdParty)
+	pa.GET("/getbyid/:id", h.GetbyIdParty)
+
+	ca:=r.Group("/candidate")
+	ca.POST("/create", h.CreateCandidate)
+	ca.PUT("/update/:id", h.UpdateCandidate)
+	ca.DELETE("/delete/:id", h.DeleteCandidate)
+	ca.GET("/getall", h.GetAllCandidate)
+	ca.GET("/getbyid/:id", h.GetByIdCandidate)
 	return r
 }
